--- a/_posts/2021-12-07-1206-1212.md
+++ b/_posts/2021-12-07-1206-1212.md
@@ -738,3 +738,369 @@ var longestPalindromeSubseq = function (s) {
   - 우선 n 번째부터 n 번째까지의 최대 팰린드롬 길이는 1이므로 초기화한다.
   - 그리고 n 번째부터 n + 1 번째까지 최대 팰린드롬 길이는 두 수가 같으면 2, 아니면 1로 초기화한다.
   - 마지막으로 대각선으로 증가시키며 첫 번째 문자와 마지막 문자가 같다면 좌하에서 + 2, 다르다면 좌, 하의 수를 비교해 큰 수를 할당하면 문제가 해결된다.
+
+<br />
+<br />
+<br />
+
+## 1209
+
+# 리액트 수업 6일 차
+
+## degit
+
+`npx degit yamoo9/cra 프로젝트이름`
+
+- degit 명령을 사용하면 특정 Git 저장소의 최신 커밋을 찾아 다운로드 한다.
+- clone 명령어와의 차이점은 .git 디렉토리를 제외하고 다운로드 할 수 있어 더욱 빠른 다운로드가 가능하다.
+
+## Audio API
+
+오디오같은 자원을 자동 재생하고 싶은 경우, autoplay 어트리뷰트를 넣어줘도 크롬과 같은 브라우저 엔진 자체에서 자동 재생을 제한하기에 다른 코드를 넣어줘야 한다.
+
+### navigator.mediaDevices API
+
+- 카메라, 마이크, 화면 공유와 같이 현재 연결된 미디어 입력 장치에 접근할 수 있는 MediaDevices 객체를 반환한다.
+
+#### MediaDevices.getUserMedia()
+
+- 사용자에게 미디어 입력 장치 사용 권한을 요청하며, 사용자가 수락하면 요청한 미디어 종류의 트랙을 포함한 MediaStream을 반환한다.
+- 반환하는 값은 MediaStream 객체로 이행하는 Promise이다.
+
+```html
+/* index.html */
+<audio id="bgm" src="/assets/bgm-count.mp3"></audio>
+
+<script>
+  window.navigator.mediaDevices
+    .getUserMedia({
+      audio: true,
+    })
+    // fulfilled
+    .then((stream) => {
+      console.log("미디어 재생 가능");
+      const bgmNode = document.getElementById("bgm");
+      bgmNode.play();
+    })
+    // rejected
+    .catch(({ message }) => console.error(message));
+</script>
+```
+
+- 사용자가 음향 접근을 허용하겠냐는 질문에 확인을 누르면 then 메서드가 실행되어 음악이 정상적으로 동작한다.
+
+### JS로 모듈화
+
+```javascript
+// index.js
+let bgmNode = null;
+
+settings.autoPlaySound({
+  src: '/assets/bgm-count.mp3' /* required */,
+  resolve: (audioNode) => {
+    bgmNode = audioNode;
+    bgmNode.loop = true;
+    bgmNode.play();
+  }
+});
+
+// setting.js
+autoPlaySound({
+  src,
+  id = 'bgm',
+  resolve,
+  reject = (errorLog) => console.error(errorLog),
+} = {}) {
+  document.body.insertAdjacentHTML(
+    'beforeend',
+    `<audio id=${id} src=${src} loop></audio>`
+  );
+
+  window.navigator.mediaDevices
+    .getUserMedia({
+      audio: true,
+    })
+    .then(() => {
+      resolve(document.getElementById(id));
+    })
+    .catch(({ message }) => reject(message));
+```
+
+- autoPlaySound의 매개변수로 받을 목록들을 순서 상관없이 받기 위해서 객체로 전달받도록 구현했다.
+- body의 맨 뒤에 audio 태그를 삽입하고, 유저에게 오디오 접근을 허용할 것인지 물어봐서 허용한다면 resolve 콜백함수를 실행시키도록 한다.
+- resolve 함수는 실행시킬 오디오 요소를 가지고 있는 노드 객체를 전달받아 루프로 실행시킨다.
+- bgmNode를 애니메이션이 동작할 때만 실행시키기 위해 외부 스코프에 null을 할당해두고 접근할 수 있도록 했다.
+
+### insertAdjacentHTML
+
+- 기존 요소를 제거하지 않으면서 위치를 지정해 새로운 요소를 삽입한다.
+- 첫 번째 인수로 전달한 위치에 삽입하여 DOM에 반영한다.
+  - beforebegin, beforeend, afterbegin, afterend를 전달할 수 있다.
+- 기존 요소에는 영향을 주지 않으므로 innerHTML 프로퍼티보다 효율적이고 빠르다.
+
+## 조건부 렌더링
+
+- React에서 조건부 렌더링은 JS의 조건 처리와 같이 동작한다. 상태에 따라서 컴포넌트 중 몇 개만을 렌더링 할 수 있다.
+- JSX는 주로 문보다는 표현식을 위주로 사용한다.
+
+### StrictMode
+
+- 디버깅을 할 때 유용한 컴포넌트. 리액트에 종속되어 있는 컴포넌트로 애플리케이션 내의 잠재적인 문제를 알아내기 위한 도구
+- `Fragment`와 같이 UI를 렌더링하지 않으며, 자손들에 대한 부가적인 검사와 경로를 활성화함.
+- 컴파운드 컴포넌트 - 빌드할때는 컴파일 되지 않고, 개발할 때만 사용
+
+```javascript
+<StrictMode></StrictMode>
+```
+
+### 삼항식을 이용한 조건부 렌더링
+
+```javascript
+let error = null;
+
+error = {
+  message: "이런!! 네트워크 장애가 발생했습니다. ㅠㅡㅠ",
+  log() {
+    console.error(this.message);
+  },
+};
+
+const ConditionalRendering = () => {
+  // nullish ??
+  error ?? console.log("현재 앱에는 오류(error)가 발생하지 않았습니다.");
+
+  // optional chaining ?.
+  error?.log?.();
+
+  return (
+    <div className="container">
+      <h1 className="headline">
+        {!error ? "React 조건부 렌더링" : <EmojiOops height={200} />}
+      </h1>
+      <p className={error && "error-message"}>
+        {!error
+          ? "오류가 존재하면 렌더링 되도록 코드를 작성합니다."
+          : error.message}
+      </p>
+    </div>
+  );
+};
+```
+
+- ConditionalRendering 컴포넌트를 사용할 때 error가 없다면 정상적으로 문자열을, error가 있다면 웁스 이모티콘과 에러 메시지를 렌더링한다.
+- `error?.log?.()`는 에러가 있다면 log 메서드를, log 메서드가 실행 가능하다면 실행하는 코딩 방식이다.
+- if 문은 && 연산자로, if else문은 삼항 연산자로 대체 가능하다. 상황에 따라 가독성에 더 좋은 방법을 사용하자
+
+### 컴포넌트가 렌더링하는 것을 막기
+
+- 컴포넌트에 의해 렌더링될 때 컴포넌트 자체를 숨기고 싶을 때가 있을 수 있다.
+- 이때는 렌더링 결과를 출력하는 대신 null을 반환하면 해결할 수 있다.
+- 컴포넌트의 render 메서드로부터 null을 반환하는 것은 생명주기 메서드 호출에 영향을 주지 않는다.
+
+```javascript
+function WarningBanner(props) {
+  if (!props.warn) {
+    return null;
+  }
+
+  return <div className="warning">Warning!</div>;
+}
+```
+
+## Vue2 vs Vue3
+
+Vue3는 IE를 지원하지 않는다는 제약 사항 때문에 현업에서 가장 많이 쓰이고 있는 라이브러리 버전은 Vue2이다.
+
+## 리스트 렌더링
+
+### 기본 리스트 컴포넌트
+
+```javascript
+const NumberList = (props) => {
+  const numbers = props.numbers;
+  const listItems = numbers.map((number) => <li>{number}</li>);
+  return <ul>{listItems}</ul>;
+};
+
+render(
+  <StrictMode>
+    <NumberList numbers={[1, 2, 3, 4, 5]} />
+  </StrictMode>,
+  document.getElementById("root")
+);
+```
+
+- 일반적으로 컴포넌트 안에서 리스트를 렌더링한다.
+- 배열을 ul 엘리먼트 안에 포함하고 DOM에 렌더링한다.
+- 이 코드를 실행하면 리스트의 각 항목에 key를 넣어야 한다는 경고가 표시된다. key는 엘리먼트 리스트를 만들 때 포함해야 하는 특수한 문자열 어트리뷰트이다.
+
+### Key
+
+- Key는 리액트가 어떤 항목을 변경, 추가 또는 삭제할지 식별하는 것을 돕는다.
+- Key는 엘리먼트에 안정적인 고유성을 부여하기 위해 배열 내부의 엘리먼트에 지정해야 한다.
+- Key를 선택하는 가장 좋은 방법은 리스트의 다른 항목들 사이에서 해당 항목을 고유하게 식별할 수 있는 문자열을 사용하는 것이다.
+  - 대부분의 경우 데이터의 ID를 키로 사용한다.
+- 안정적인 ID가 없다면 최후의 수단으로 항목의 인덱스를 키로 사용할 수 있지만, 순서가 바뀔수 있는 경우 키에 인덱스를 사용하는 것은 좋지 않다.
+  - 이로 인해 성능이 저하되거나 컴포넌트 state와 관련된 문제가 발생할 수 있다.
+  - 리스트 항목에 명시적으로 키를 지정하지 않으면 리액트는 기본적으로 인덱스를 키로 사용한다.
+
+```javascript
+const todoItems = todos.map((todo) => <li key={todo.id}>{todo.text}</li>);
+```
+
+### Key 핵심 3가지
+
+1. Key는 목록의 index가 아닌 목록의 고유한 id를 사용할 것. 셔플링을 하게 되면 매핑을 보장하지 않는다.
+2. Key 값이 변하면 컴포넌트를 새로 그리는 데 이를 활용할 수 있다.
+3. 재조정 알고리즘에서 자식들이 Key를 가지고 있다면, 리액트는 Key를 통해 기존 트리와 이후 트리의 자식들이 일치하는지 확인한다. 즉, 재조정 알고리즘의 속도를 향상시키는 데 도움이 된다.
+
+### Key 특징
+
+- Key는 주변 배열의 context에서만 의미가 있다.
+  - 경험상 map() 함수 내부에 있는 엘리먼트에 Key를 넣어 주는 게 좋다.
+- Key는 형제 사이에서만 고유한 값이어야 한다.
+  - 전체 범위에서 고유할 필요는 없다.
+- Key는 힌트를 제공하지만 컴포넌트로 전달하지는 않는다. 즉, props.key는 읽을 수 없다.
+  - 컴포넌트에서 key와 동일한 값이 필요하면 다른 이름의 prop으로 명시적으로 전달한다.
+- JSX 안에 보간법을 사용해 map 함수의 결과를 인라인으로 처리할 수 있다.
+  - 가독성을 위해 변수로 추출해야 할지 인라인으로 넣을지는 개발자가 직접 판단해야 한다.
+  - map() 함수가 너무 중첩된다면 컴포넌트로 추출하는 것이 좋다.
+
+### 컴파운드 컴포넌트 패턴
+
+```javascript
+function List(props) {
+  return <ul>{props.children}</ul>;
+}
+
+List.Item = function ListItem(props) {
+  return (
+    <li>
+      <a href={props.link}>{props.text}</a>
+    </li>
+  );
+};
+
+// List.Item.displayName = 'ListItem';
+
+<List>
+  {list.map((item, index) => (
+    <List.Item key={index} link={item.link} text={item.text} />
+  ))}
+</List>;
+```
+
+- 컴포넌트가 컴포넌트를 포함하는 패턴
+- 하위 컴포넌트에 화살표 함수를 사용할 경우 익명 함수이기 때문에 displayName prop을 사용해 React 개발 도구에 표시될 컴포넌트 이름을 지정할 수있다.
+- 반면, 함수 표현식을 사용하면 이름을 명시할 수 있어 별도로 설정하지 않아도 컴포넌트 이름을 지정할 수 있다.
+
+### 객체 렌더링
+
+```javascript
+import React, { Fragment as Template } from "react";
+
+{
+  Object.entries(db).map(([key, value]) => {
+    return (
+      <Template key={key}>
+        <dt>{key}</dt>
+        <dd>
+          {isObject(value) || isArray(value) ? (
+            <PrettyPrintCode code={value} />
+          ) : (
+            value
+          )}
+        </dd>
+      </Template>
+    );
+  });
+}
+```
+
+- Object.entries() 메서드를 사용해 [키, 값] 배열로 변환하고 map 메서드를 사용했다.
+- dl태그 내부에 dt와 dd외의 요소는 웹 표준을 준수하기 위해 넣지 않아야 하므로 Fragment를 활용하였다.
+- 참고로 Key는 fragment에 전달할 수 있는 유일한 어트리뷰트이다.
+- key가 있다면 <React.Fragment> 문법으로 명시적으로 선언해야 한다.
+- Fragment의 단축 문법은 key 어트리뷰트를 사용하지 않을 때만 사용가능하다.
+
+## 컴포넌트 별 CSS 파일 관리
+
+지금까지는 하나의 CSS 파일로 관리했다면, 이제는 관심사의 분리를 위해 컴포넌트 별로 CSS 파일을 관리하는 형태로 바꿔보고자 한다.
+
+컴포넌트 JS 파일에서 CSS 파일을 불러오게 되면 에러가 발생한다. 이유는 JS 파일에서는 css 문법을 읽어들일 수 없기 때문이다.
+
+### style-loader
+
+`npm i -D {style,css}-loader`
+
+- style-loader는 css-loader와 함께 사용하는 것이 권장된다.
+- css-loader에 의해 css가 해석되고, style-loader에 의해 html에 스타일을 주입받는다.
+- webpack 설정에서 로더를 읽어오도록 설정해야 한다.
+
+```javascript
+const devConfig = {
+  target: ["web"],
+  mode: "development",
+  devtool: "source-map",
+  module: {
+    rules: [
+      {
+        test: /\.jsx?$/i,
+        exclude: /(node_modules|dist)/,
+        use: "babel-loader",
+      },
+      {
+        test: /\.css$/i,
+        use: ["style-loader", "css-loader"],
+      },
+    ],
+  },
+};
+
+module.exports = devConfig;
+```
+
+### MiniCssExtractPlugin
+
+`npm i -D mini-css-extract-plugin`
+
+- css 파일을 추출해주는 플러그인. 빌드할 때만 필요하다.
+- css 파일도 빌드되어 추출되기를 원하는 사람이 있을 수도 있다. ex) 퍼블리셔
+
+```javascript
+const MiniCssExtractPlugin = require('mini-css-extract-plugin');
+const devConfig = require('./config.dev');
+
+const filteredRules = devConfig.module.rules.filter(
+  ({ test: regExp }) => !regExp.test('.css')
+);
+
+const buildConfig = merge(devConfig, {
+  mode: 'production',
+  devtool: false,
+  module: {
+    rules: devConfig.module.rules.map((rule) => {
+      const { test: regExp } = rule;
+      if (regExp.test('.css')) {
+        return {
+          test: /\.css$/i,
+          use: [MiniCssExtractPlugin.loader, 'css-loader'],
+        };
+      }
+      return rule;
+    }),
+  },
+  plugins: [
+    new MiniCssExtractPlugin({
+      filename: 'css/[name].css',
+    }),
+  ],
+}
+```
+
+- 빌드 시에는 style-loader를 적용할 필요 없으니, 제외하고 새로 적용한다.
+
+### 로더 vs 플러그인
+
+- 플러그인은 웹팩의 기본적인 동작에 추가적인 기능을 제공하는 속성
+- 로더는 파일을 해석하고 변환하는 과정에 관여하는 반면, 플러그인은 결과물의 형태를 바꾸는 역할을 한다.
