--- a/_posts/2021-12-07-1206-1212.md
+++ b/_posts/2021-12-07-1206-1212.md
@@ -1104,3 +1104,253 @@ const buildConfig = merge(devConfig, {
 
 - 플러그인은 웹팩의 기본적인 동작에 추가적인 기능을 제공하는 속성
 - 로더는 파일을 해석하고 변환하는 과정에 관여하는 반면, 플러그인은 결과물의 형태를 바꾸는 역할을 한다.
+
+<br />
+<br />
+<br />
+
+## 1210
+
+# 리액트 수업 7일 차
+
+## 파일 압축
+
+### CssMinimizerPlugin
+
+`npm i -D css-minimizer-webpack-plugin`  
+CSS 파일을 압축해주는 플러그인
+
+- 이 플러그인은 웹팩의 plugins에 추가하는 것이 아니라 optimization에 추가해줘야 한다.
+
+```javascript
+optimization: {
+  minimizer: [new CssMinimizerPlugin()],
+},
+```
+
+### TerserWebpackPlugin
+
+자바스크립트 파일을 압축해주는 플러그인
+`npm i -D terser-webpack-plugin`
+
+- CssMinimizerPlugin과 마찬가지로 optimization에 추가해줘야 한다.
+
+```javascript
+optimization: {
+  minimizer: [new CssMinimizerPlugin(), new TerserPlugin()],
+},
+```
+
+### 번들 파일명 바꿔서 내보내기
+
+```javascript
+const path = require('path');
+const __root = process.cwd(); // 현재 루트 디렉토리
+
+*output*:{
+  // 반드시 절대경로
+  path: path.resolve(__root,'dist'),
+	filename: 'js/[name].js',
+},
+```
+
+- filename에 지정한 값이 빌드된 파일 이름이 된다.
+- 파일로 들어오는 이름에 따라 수정하고 싶은 경우 [name].js 처럼 붙이면 파일이름 그대로 js가 번들되어 나온다.
+
+## 리액트에서 테스트 환경 구성하기
+
+`npm i -D jest `  
+`npm i -D @testing-library/{react,jest-dom}`  
+`npx jest --init`로 jest.config.js 파일 생성
+
+```javascript
+// jest.config.js
+module.exports = {
+  clearMocks: true,
+  collectCoverage: true,
+  coverageDirectory: "coverage",
+  roots: ["<rootDir>/src"],
+  setupFilesAfterEnv: ["./setupTest.js"],
+  testEnvironment: "jsdom",
+  testPathIgnorePatterns: ["/node_modules/", "/dist/"],
+};
+```
+
+### setupTest.js 파일
+
+```javascript
+import "@testing-library/jest-dom/extend-expect";
+```
+
+- jest에서 DOM 관련 추가 메서드들을 사용할 수 있게 해줌
+
+### eslint jest 연동
+
+`npm i -D eslint-plugin-jest`
+
+- jest 함수를 알아보기 위해서 설치해줘야 한다.
+
+```javascript
+module.exports = {
+  env: {
+    'jest/globals': true,
+  },
+  extends: [
+    'plugin:jest/recommended',
+  ],
+  plugins: ['react', 'jsx-a11y', 'prettier', 'jest'],
+  ...
+};
+```
+
+- env, plugins, extends에 jest 설정 추가
+
+### 컴포넌트 CSS 불러오도록 설정
+
+`npm i identity-obj-proxy`
+
+- 컴포넌트는 JS이므로 css를 불러왔을 때 읽을 수 없다. 즉, TDD는 css를 확인할 수 없다.
+- import하는 css를 가져와서 가짜 객체를 만들어주는 플러그인. 테스트 전용 플러그인
+
+```javascript
+// jest.config.js
+moduleNameMapper: {
+  '\\.css$': 'identity-obj-proxy',
+},
+```
+
+### 테스트
+
+**테스트 관련 메서드 URL**
+
+- 메서드를 모두 외울수는 없으니 필요할 때마다 찾아서 사용하자
+  [GitHub - testing-library/jest-dom: Custom jest matchers to test the state of the DOM](https://github.com/testing-library/jest-dom#tohavevalue)
+
+```javascript
+// RandomCountup.test.js
+import React from "react";
+import { render } from "@testing-library/react";
+import { RandomCountUp } from "./RandomCountUp";
+
+// 컴포넌트 props
+let count = 101;
+let isComplete = true;
+
+describe("RandomCountUp 컴포넌트", () => {
+  test("RandomCountUp 컴포넌트는 container 요소가 문서에 존재합니다.", () => {
+    // 컴포넌트 render
+    const { getByTestId } = render(
+      <RandomCountUp count={count} isComplete={isComplete} />
+    );
+
+    // test
+    expect(getByTestId("container")).toBeInTheDocument();
+  });
+
+  test(`RandomCountUp 컴포넌트가 출력하는 카운트 값은 ${count}입니다.`, () => {
+    // 컴포넌트 Render
+    const { getByText } = render(
+      <RandomCountUp count={count} isComplete={true} />
+    );
+
+    const countNode = getByText(count);
+
+    // 테스트
+    expect(countNode).toHaveTextContent(count.toString());
+    expect(countNode).toHaveStyle("animation-name: none");
+  });
+});
+```
+
+- 테스트를 진행할 컴포넌트와 리액트 테스트 라이브러리의 render 함수를 받아온다.
+- render함수는 몇 가지 프로퍼티를 가진 객체를 반환한다.
+- getByTestId는 컴포넌트의 data-testid와 매칭된다.
+
+## 클래스 컴포넌트
+
+- 웹 표준 컴포넌트 기술 사양과 흡사
+
+```javascript
+// 클래스 컴포넌트
+export class RandomCountUpClass extends React.Component {
+  constructor(props) {
+    super(props);
+  }
+
+  getCompleteStyle() {
+    return !this.props.isComplete ? null : { animationName: "none" };
+  }
+
+  render() {
+    return (
+      <div className="randomCountUp">
+        <output style={this.getCompleteStyle()}>{this.props.count}</output>
+      </div>
+    );
+  }
+}
+```
+
+- class 컴포넌트는 기본적으로 React.Component를 상속받아야 한다.
+- 함수 컴포넌트는 this를 사용하지 않고, 클래스 컴포넌트는 this를 사용한다.
+- 함수는 몸체 자체가 render 역할을 하고, 클래스는 돌아갈 때마다 render가 호출된다.
+
+## 프레젠테이셔널 컴포넌트 vs 컨테이너 컴포넌트
+
+### 프레젠테이셔널 컴포넌트
+
+- 시각적으로 표시하는 데 중점을 둔 컴포넌트
+- 상태가 없고, props를 전달받아 화면에 표시해주는 컴포넌트
+- 주로 함수 컴포넌트로 많이 구현함.
+
+### 컨테이너 컴포넌트
+
+- 상태가 있고, props를 공급해주는 컴포넌트
+
+### 이모지 프레젠테이셔널 컴포넌트
+
+```javascript
+// Emoji.js
+export function Emoji({ source, label, className, ...restProps }) {
+  return (
+    <figure
+      className={classNames("emoji", className)}
+      data-testid="wrapper"
+      {...restProps}
+    >
+      <img src={source} alt={label} title={label} />
+    </figure>
+  );
+}
+
+Emoji.defaultProps = {
+  className: "",
+};
+
+// App.js
+import React from "react";
+import { Emoji } from "../../components";
+
+const props = {
+  id: "emoji-id",
+  "aria-label": "emoji-label",
+  source: "/assets/emoji/oops.png",
+  label: "웁스!!",
+};
+
+export default function App({ greetingMessage }) {
+  return (
+    <div className="app">
+      <h1>{greetingMessage}</h1>
+      <Emoji {...props} />
+    </div>
+  );
+}
+```
+
+- 컴포넌트의 props로 객체를 `{...props}` 형태로 보내는 문법을 지원한다.
+- props를 받을 때 `...restProps`로 rest 파라미터처럼 받을 수 있다.
+
+### Object.fromEntries()
+
+- 키값 쌍 목록의 배열을 다시 객체로 변환하는 메서드
