--- a/_posts/2021-12-07-1206-1212.md
+++ b/_posts/2021-12-07-1206-1212.md
@@ -1354,3 +1354,145 @@ export default function App({ greetingMessage }) {
 ### Object.fromEntries()
 
 - 키값 쌍 목록의 배열을 다시 객체로 변환하는 메서드
+
+<br />
+<br />
+<br />
+
+## 1211
+
+# 모의 코딩테스트 9회 회고
+
+## 코딩테스트 문제
+
+### Sum of Subarray Minimums
+
+```javascript
+var sumSubarrayMins = function (arr) {
+  let answer = 0;
+
+  for (let i = 0; i < arr.length; i++) {
+    let min = 100000;
+    for (let j = i; j < arr.length; j++) {
+      min = Math.min(min, arr[j]);
+      answer += min;
+    }
+  }
+  return answer % (10 ** 9 + 7);
+};
+```
+
+- 모든 부분 수열의 최솟값을 구하는 문제
+- 이중 포문을 돌면서 최솟값을 갱신해나가며 해결했다.
+
+### pseudo palindrome
+
+```javascript
+function solution(s) {
+  const answer = [];
+
+  s.forEach((str) => {
+    let lt = 0;
+    let rt = str.length - 1;
+    let palindromeTestResult = 0;
+
+    while (lt < rt && palindromeTestResult < 2) {
+      if (str[lt] === str[rt]) {
+        lt++;
+        rt--;
+      } else {
+        if (str[lt + 1] === str[rt]) lt++;
+        else if (str[lt] === str[rt - 1]) rt--;
+        else palindromeTestResult++;
+
+        palindromeTestResult++;
+      }
+    }
+    answer.push(palindromeTestResult);
+  });
+
+  return answer;
+}
+```
+
+- 모든 단어를 순회하면서 단어의 첫 단어와 끝 단어부터 비교하여 서로 같다면 lt를 증가시키고 rt를 감소시켜 서로 다를 때의 개수를 셌다.
+- 다를 경우에는 앞단어를 확인하여 그마저도 다르다면 해당 문자는 일반 문자열 처리하여 문제를 해결했다.
+
+### shortest-distance-from-all-buildings
+
+```javascript
+function solution(grid) {
+  let answer = 1000;
+  const m = grid.length;
+  const n = grid[0].length;
+  const dx = [-1, 0, 1, 0];
+  const dy = [0, 1, 0, -1];
+  let L = 0;
+  let distance = 0;
+  let foundbuilding = 0;
+  let queue;
+  let ch;
+  const countOfbuilding = grid.reduce(
+    (acc, cur) => acc + cur.reduce((acc, cur) => acc + (cur === 1 ? 1 : 0), 0),
+    0
+  );
+
+  function BFS() {
+    while (queue.length) {
+      L += 1;
+      const len = queue.length;
+
+      for (let i = 0; i < len; i++) {
+        const [x, y] = queue.shift();
+
+        for (let j = 0; j < 4; j++) {
+          const nx = x + dx[j];
+          const ny = y + dy[j];
+
+          if (
+            nx >= 0 &&
+            ny >= 0 &&
+            nx < m &&
+            ny < n &&
+            ch[nx][ny] === 0 &&
+            grid[nx][ny] !== 2
+          ) {
+            ch[nx][ny] = 1;
+            if (grid[nx][ny] === 1) {
+              distance += L;
+              foundbuilding += 1;
+            } else {
+              queue.push([nx, ny]);
+            }
+
+            if (foundbuilding === countOfbuilding) {
+              return distance;
+            }
+          }
+        }
+      }
+    }
+    return 1000;
+  }
+
+  for (let i = 0; i < m; i++) {
+    for (let j = 0; j < n; j++) {
+      if (grid[i][j] === 0) {
+        ch = Array.from(Array(m), () => Array(n).fill(0));
+        ch[i][j] = 1;
+        queue = [[i, j]];
+        distance = 0;
+        L = 0;
+        foundbuilding = 0;
+        answer = Math.min(answer, BFS());
+      }
+    }
+  }
+
+  return answer;
+}
+```
+
+- 레벨 탐색을 이용해서 해결한 문제. 문제 풀이는 그렇게 어렵지 않았지만 코드가 길어질 수 밖에 없는 문제였다.
+- 처음에 장애물에 막혀서 BFS가 멈추는 경우에 리턴값을 크게 잡고 처리를 해줬어야 했는데, 그걸 까먹어서 디버깅이 곤란했다.
+- 이렇게 코드가 길어지는 문제들은 디버깅을 위해서라도 한 번에 잘 풀어야 할 거 같다.
