--- a/_posts/2021-12-16-1213-1219.md
+++ b/_posts/2021-12-16-1213-1219.md
@@ -154,7 +154,7 @@ export function A11yHidden({
 
 ## postcss 설정
 
-- postcss는 sass와 다르게 표준이다!
+- postcss는 sass와 다르게 표준이다!  
   `npm i -D postcss postcss-loader postcss-preset-env`
 
 ```javascript
@@ -340,3 +340,131 @@ export default function App({ greetingMessage }) {
 ```
 
 - 위와 같이 설정하면 ?파일이름을 뒤에 붙였을 때는 컴포넌트, 그냥 가져왔을 때는 data URI방식으로 동작한다.
+
+<br />
+<br />
+
+## 1214
+
+# 모의 코딩테스트 10회 회고
+
+실전 코딩 테스트 이전 마지막 모의 테스트!  
+약 1분을 남기고 모든 문제를 해결했다. 이로서 4연속 모의 코딩테스트는 만점이다.  
+그런데 완벽하게 풀지는 못한 것 같다는 생각이 들어 그리 후련하지는 않다.  
+이게 곧 다가올 실전 테스트에 약간은 떨리기도 하지만, 긴장하지만 않고 하던대로 한다면 좋은 결과가 있을 것이라고 생각한다.
+
+## Partition Array into Disjoint Intervals
+
+```javascript
+var partitionDisjoint = function (nums) {
+  const n = nums.length;
+  const minR = Array(n).fill(0);
+  minR[n - 1] = nums[n - 1];
+
+  for (let i = n - 2; i >= 0; i--) {
+    minR[i] = Math.min(minR[i + 1], nums[i]);
+  }
+
+  let currentMax = nums[0];
+  for (let i = 1; i < n; i++) {
+    currentMax = Math.max(currentMax, nums[i - 1]);
+    if (currentMax <= minR[i]) return i;
+  }
+};
+```
+
+- O(n)으로 풀기 위해서는 추가로 특정 배열을 작업해줘야만 했다.
+- minR은 우측부터 현재 인덱스까지의 최솟값을 저장하는 배열이다.
+- 인덱스 1부터 n전까지 최댓값을 구하고, 해당 최댓값이 minR의 i번째값보다 작거나 같다면, i-1까지의 모든 수가 minR의 i번째부터의 최솟값보다 작다는 의미이므로 i를 반환해 값을 구했다.
+
+## Prison Cells After N Days
+
+```javascript
+var prisonAfterNDays = function (cells, n) {
+  let tmp = [...cells];
+  let answer = Array(8).fill(0);
+  const cnt = n % 14 ? n % 14 : 14;
+
+  for (let i = 0; i < cnt; i++) {
+    for (let j = 1; j <= 6; j++) {
+      answer[j] = tmp[j - 1] === tmp[j + 1] ? 1 : 0;
+    }
+    tmp = [...answer];
+  }
+  return answer;
+};
+```
+
+- 총 8개의 셀 중, 맨 끝 두 개는 0이기 때문에 총 경우의 수는 64가지였다.
+- 입력값이 일억이었기에 이분탐색으로 해결하거나, 일정한 규칙이 있을 것이라고 판단하였다.
+- 이분탐색을 사용하기는 어렵다고 생각해서 일정한 규칙을 찾은 결과 14번마다 반복된다는 사실을 깨닫게 되었다.
+- 반복 횟수를 14로 나눈 나머지만큼 반복하여 문제를 해결했다.
+
+## 가장 밸런스 좋은 팀 구성
+
+```javascript
+function solution(nums) {
+  let answer = Number.MAX_SAFE_INTEGER;
+  const n = nums.length;
+  const total = nums.reduce((acc, cur) => acc + cur, 0);
+  const ch = Array(n).fill(0);
+
+  function DFS(L, s, t, sum1, sum2) {
+    if (L === 6) {
+      const arr = [sum1, sum2, total - sum1 - sum2];
+      answer = Math.min(answer, Math.max(...arr) - Math.min(...arr));
+    } else if (L >= 3 && L < 6) {
+      for (let i = t; i < n; i++) {
+        if (ch[i] === 0) {
+          ch[i] = 1;
+          DFS(L + 1, s, i + 1, sum1, sum2 + nums[i]);
+          ch[i] = 0;
+        }
+      }
+    } else {
+      for (let i = s; i < n; i++) {
+        ch[i] = 1;
+        DFS(L + 1, i + 1, t, sum1 + nums[i], sum2);
+        ch[i] = 0;
+      }
+    }
+  }
+  DFS(0, 0, 0, 0, 0);
+
+  return answer;
+}
+```
+
+- 발상을 조금 바꿔서 한 DFS 내에서 두 개의 조합을 구하는 방법을 고려해봤다.
+- 기존 조합 방식 + 체크 배열을 이용해서 중복되지 않은 두 조합을 구하면 나머지 한 팀은 총 값 - 두 조합 값 이므로 이를 통해 정답을 찾았다.
+
+## 해석 가능한 가지 수 구하기
+
+```javascript
+function solution(s) {
+  const len = s.length;
+  const dy = Array(len).fill(0);
+
+  function DFS(L) {
+    if (dy[L] > 0) return dy[L];
+    if (s[L] === "0") return 0;
+    if (L === len - 1) return 1;
+    if (L === len - 2) {
+      if (s[L + 1] === "0") return 1;
+      else if (+s.substring(L, L + 2) <= 26) return 2;
+      else return 1;
+    }
+    if (+s.substring(L, L + 2) <= 26) {
+      return (dy[L] = DFS(L + 1) + DFS(L + 2));
+    } else {
+      return (dy[L] = DFS(L + 1));
+    }
+  }
+
+  return DFS(0);
+}
+```
+
+- a-z까지 1-26으로 해석되는 문자열의 해석 가능한 가지 수를 구하는 문제
+- 메모이제이션 기법을 이용해 값을 저장하고 반환하는 방식으로 효율성을 해결했다.
+- 그 외에 마지막 길이면 1을, 현재 문자가 0이면 0을 그 외에도 분기 처리하여 적절한 값을 반환해서 문제를 해결했다.
