--- a/_posts/2021-12-16-1213-1219.md
+++ b/_posts/2021-12-16-1213-1219.md
@@ -468,3 +468,257 @@ function solution(s) {
 - a-z까지 1-26으로 해석되는 문자열의 해석 가능한 가지 수를 구하는 문제
 - 메모이제이션 기법을 이용해 값을 저장하고 반환하는 방식으로 효율성을 해결했다.
 - 그 외에 마지막 길이면 1을, 현재 문자가 0이면 0을 그 외에도 분기 처리하여 적절한 값을 반환해서 문제를 해결했다.
+
+<br />
+<br />
+<br />
+
+## 1215
+
+# 리액트 수업 9일 차
+
+## 컨테이너 컴포넌트
+
+- 클래스 컴포넌트는 컨테이너 컴포넌트로서 사용된다.
+- 컨테이너 컴포넌트는 비즈니스 로직을 가지고 있으며, 프레젠테이셔널 컴포넌트를 포함 구성해 화면을 그리는 최소한의 스타일 정보를 가진다.
+- 컴포넌트의 역할을 프레젠테이셔널, 컨테이너로 분리해 각각의 고유한 책임을 부여하여 컴포넌트의 재사용성을 높이고, 디버깅을 손쉽게 처리
+- 즉, 컨테이너 컴포넌트는 상태 또는 비즈니스 로직을 포함하여 프레젠테이셔널 컴포넌트에 Props를 전달하여 UI를 렌더링 하도록 한다.
+
+### State 종류
+
+리액트의 주된 작업은 애플리케이션 상태를 가져와 DOM 노드로 전환하는 것이다.
+
+- Model 상태 - ex) 도서 목록
+- View / UI 상태 - ex) 오름차순 또는 내림차순
+- Session 상태 - ex) 로그인 또는 로그아웃
+- Communication 상태 - ex) 서버와 통신 중 상태
+- 애플리케이션에서 다루는 상태 또는 데이터는 매우 다양함
+
+### 클래스 vs 함수 컴포넌트
+
+- 클래스 컴포넌트는 소유(this) 멤버를 가질 수 있고, 상태와 라이프 사이클 메서드를 설정 가능
+- 함수 컴포넌트는 소유(this) 멤버를 가질 수 없으며, 상태를 가지지 못함
+- 함수 컴포넌트는 컴포넌트가 다시 렌더링 될 때마다 함수 몸체가 다시 실행되는데 반해, 클래스 컴포넌트는 생성된 클래스 인스턴스를 통해 다시 렌더링 될 때 이전 값에 접근하거나 조작할 수 있다.
+
+-> 리액트 훅의 등장으로 함수 컴포넌트 또한 컨테이너 역할 수행이 가능하다.
+
+### props vs state
+
+- 컴포넌트는 외부로부터 Props를 전달 받아 사용할 수 있지만, 전달 받은 속성은 읽기 전용으로 값을 업데이트 할 수 없다.
+- 외부에서 전달받은 속성은 읽기 전용이므로, 변경 가능한 데이터인 컴포넌트의 상태가 필요하다.
+- 즉, 업데이트가 필요한 컴포넌트는 상태를 설정해 사용한다.
+- state는 컴포넌트가 소유한 로컬 데이터로 적용 범위는 현재 컴포넌트에 한정된다.
+
+### 컴포넌트 상태
+
+class 컴포넌트의 상태는 constructor 내부에 this.state를 사용해 정의한다.
+
+```javascript
+import React from "react";
+
+class List extends React.Component {
+  constructor(props) {
+    super(props);
+
+    this.state = {
+      items: [],
+    };
+  }
+
+  render() {}
+}
+```
+
+클래스 필드 선언을 사용하면 생성자 메서드를 사용하지 않고 상태를 손쉽게 설정할 수 있다.
+
+```javascript
+class List extends React.Component {
+  state = {
+    items: []
+  }
+  ...
+}
+```
+
+- 제안 문법이고 표준으로 채택되지는 않았지만, Babel이 처리해주니 바로 사용 가능하다.
+
+React 클래스 컴포넌트의 상태는 불변(immutable) 데이터로 setState API를 사용해 업데이트 해야 한다.
+
+```javascript
+this.setState({
+  list: [ ...this.state.list, { ... } ]
+})
+```
+
+- 일반적으로 객체가 참조를 통해 공유되어 있다면 상태가 어디든지 변경 될 가능성도 커져 문제가 된다.
+- 변경이 일어난 객체의 프로퍼티만 비교함으로써 React에서 최적화가 가능하다.
+  - React는 실제 DOM을 제어하는 것이 아니라 중간에 가상 DOM을 두고 관리하기 때문에 빠르게 UI 변화에 대한 관리가 가능하다.
+  - 일부 side-effect로 인해 원하지 않은 시점에 컴포넌트가 다시 렌더링되는 경우 `shouldComponentUpdate`로 최적화가 가능하다.
+- 상태값이 변경 불가성이라면 간단한 비교 연산자를 통해 변화를 감지할 수 있지만, 깊은 깊이에 있는 내부 프로퍼티는 비교가 힘들 수도 있다.
+  - 일일이 비교하기 힘들기 때문에 비용이 좀 들더라도 객체를 복사하여 새로운 객체를 생성한 후 변경하는 작업을 한다.
+  - 이렇게 하면 메모리 주소가 바뀔때마다 데이터가 변경되었다고 판단할 수 있기 때문이다.
+
+setState()에 전달되는 updater는 함수 타입 설정도 가능하다.
+
+```javascript
+this.setState((prevState) => {
+  return {
+    list: [ ...prevState, { ... } ]
+  }
+})
+```
+
+setState()의 두 번째 인자로 콜백함수를 전달할 수 있다.
+
+```javascript
+this.setState(
+  (prevState) => ({ list: [ ...prevState, { ... } ]}),
+
+  // 상태 업데이트 이후 실행
+  // 업데이트 된 list 상태를 확인한 후, 처리
+  this.checkList
+);
+```
+
+- setState() 메서드는 비동기 방식으로 처리된다. 불필요한 렌더링을 최대한 피하려 React에서 처리하기 때문이다.
+- 상태 업데이트가 비동기 처리됨에 따라, 모든 상태가 안정적으로 업데이트 된 이후 실행되도록 콜백 함수를 제공하는 것이다.
+- render 메서드에서 setState 메서드를 호출하게 되면 상태가 변하면 render가 다시 호출되기 때문에 무한루프에 빠진다.
+
+### 태그가 포함된 문자열 인식시키기
+
+```javascript
+getDescription() {
+  return 'Edit <code>src/App.js</code> and save to reload.';
+}
+```
+
+- 위와 같이 html 코드가 포함된 문법을 JSX에 보간법을 사용하여 삽입하면 해당 문자열이 그대로 삽입된다.
+
+```javascript
+getDescription() {
+  return [
+    'Edit',
+    ' ',
+    <code key="appEntryFile">src/App.js</code>,
+    ' ',
+    'and save to reload.',
+  ];
+}
+```
+
+- 이처럼 배열을 반환하여 보간법에 삽입하면 정상적으로 태그가 작동한다.
+
+## 클래스 컴포넌트 라이프 사이클
+
+### 자주 사용되는 라이프 사이클
+
+- constructor -> 컴포넌트 생성 시점에 호출
+- render -> 컴포넌트 렌더링 시점에 호출
+- componentDidMount -> DOM에 마운트 된 이후 시점에 호출
+- componentDidUpdate -> 컴포넌트 업데이트 이후 시점에 호출
+- componentWillUnmount -> 컴포넌트 제거 예정 시점에 호출
+
+#### componentDidMount
+
+```javascript
+// 명령형 프로그래밍
+// 컴포넌트가 실제 DOM에 마운트 된 이후 실행
+componentDidMount() {
+  console.log('컴포넌트가 실제 DOM에 마운트 된 이후 실행');
+  console.log('componentDidMount', document.querySelector('.App-header'));
+
+  setTimeout(() => {
+    this.setState({
+      learnLink: {
+        ...this.state.learnLink,
+        text: '리액트 함께 배워요!!',
+      },
+    });
+  }, 3000);
+}
+```
+
+- 리액트 엘리먼트가 실제 돔에 적용되어서 해당 돔에 접근할 수 있다.
+
+#### componentDidUpdate
+
+```javascript
+componentDidUpdate(prevProps, prevState, snapShot) {
+  console.log('컴포넌트가 업데이트 되었습니다!');
+}
+```
+
+- componentDidMount에서 setState를 실행하여 새로운 상태가 반영되었을 때 실행된다.
+- 기본 매개변수로 이전 props, 이전 state, 스냅샷을 받는다.
+- 새로 업데이트 되는 경우 3가지
+  - new props
+  - setState()
+  - forceUpdate()
+
+### 자주 사용되지 않는 라이프 사이클
+
+- getDerivedStateFromProps -> 전달된 상태 및 속성을 가져와 설정하는 시점에 호출 (업데이트)
+- shouldComponentUpdate -> 컴포넌트 업데이트 예정 시점에 호출 (렌더링 할지 말지 결정)
+- getSnapshotBeforeUpdate -> 컴포넌트 업데이트 전 스냅샷 가져오는 시점에 호출
+
+#### getDerivedStateFromProps
+
+**파생 상태 생성이 필요한 경우**
+
+1. props를 통해 state 업데이트
+2. props와 state를 비교해 일치하지 않아 state 업데이트
+
+```javascript
+static getDerivedStateFromProps(props, state) {
+  return {
+    count: props.count ?? 100,
+  };
+}
+```
+
+- static 메서드로 이 안에서는 this에 접근할 수 없다. 파라미터로 접근.
+- 반환 값이 컴포넌트의 상태에 합성할 파생 상태가 된다.
+
+#### shouldComponentUpdate
+
+```javascript
+shouldComponentUpdate(nextProps, nextState) {
+  // 부모로부터 전달 받은 props의 brand.label 값이 바뀌면 컴포넌트 렌더링을 하지 않는다.
+  if (nextProps.brand.label !== this.props.brand.label) {
+    console.log('부모 컴포넌트의 리 렌더링 요청을 묵살한다.');
+    return false;
+  }
+  return true;
+}
+```
+
+- 이 메서드는 오직 성능 최적화만을 위한 것으로 렌더링을 방지하는 목적으로 사용할 경우 버그로 이어질 수 있다.
+- false를 반환할 경우 React가 갱신 작업을 건너뛰게 만들 수 있고, true를 반환할 경우 정상적으로 갱신 작업을 수행한다.
+
+#### getSnapshotBeforeUpdate
+
+- 가장 마지막으로 렌더링된 결과가 DOM 등에 반영되기 전에 호출되는 메서드
+- 컴포넌트가 DOM으로부터 스크롤 위치 등과 같은 정보를 변경되기 전에 얻을 수 있다.
+- 반환하는 값은 componentDidUpdate()에 인자로 전달된다.
+
+## 절대경로 지정
+
+### cra에서 절대경로 지정
+
+```json
+// jsconfig.json
+{
+  "compilerOptions": {
+    "baseUrl": "src"
+  },
+  "include": ["src"]
+}
+```
+
+- 절대 경로를 사용하여 모듈 가져오기를 지원하도록 애플리케이션을 구성한다.
+- src가 절대경로로 존재한다고 생각하고 모듈을 가져올 수 있다.  
+  `import Button from 'components/Button';`
+
+### 웹팩에서 절대경로 지정
+
+[Resolve/웹팩](https://webpack.kr/configuration/resolve/#resolvealias)
