--- a/_posts/2021-12-16-1213-1219.md
+++ b/_posts/2021-12-16-1213-1219.md
@@ -722,3 +722,159 @@ shouldComponentUpdate(nextProps, nextState) {
 ### 웹팩에서 절대경로 지정
 
 [Resolve/웹팩](https://webpack.kr/configuration/resolve/#resolvealias)
+
+<br />
+<br />
+<br />
+
+## 1217 TIL
+
+# 리액트 수업 10일 차
+
+## dangerouslySetInnerHTML
+
+- `dangerouslySetInnerHTML`은 브라우저 DOM에서 innerHTML을 사용하기 위한 React의 대체 방법
+- 리액트에서 직접 HTML을 설정할 수는 있지만, 위험하다는 것을 상기시키기 위해 `dangerouslySetInnerHTML`을 작성하고 `__html` 키로 객체를 전달해야 한다.
+
+```javascript
+renderDescriptionHTML() {
+  return {
+    __html: 'Edit <code>src/App.js</code> and save to reload.',
+  }
+}
+
+return (
+  ...
+  <p dangerouslySetInnerHTML={this.renderDescriptionHTML()} />
+  ...
+);
+```
+
+### 타입 관련 패키지 설치
+
+`npm i -D @types/react @types/react-dom`
+
+### cra 지원 브라우저
+
+IE 하위 버전을 지원하기 위해서는 폴리필이 필요하다.
+`npm i react-app-polyfill`
+
+엔트리 파일에서 아래와 같이 설정한다.
+
+```javascript
+import "react-app-polyfill/ie11";
+import "react-app-polyfill/stable";
+```
+
+- ie 11까지 지원하도록 하는 설정이다.
+
+## 오류 라이프 사이클 (Error Boundary)
+
+- 자식 컴포넌트 트리 내의 JS 오류를 감지하고, 해당 오류를 기록하며, 충돌이 발생한 컴포넌트 트리를 대신하여 대체 UI를 표시하는 React 컴포넌트
+- Error boundary의 하위 트리에 존재하는 렌더링 과정, 생명주기 메서드, 모든 생성자에 대하여 오류를 감지해낸다.
+- 클래스 컴포넌트에 `static getDeriedStateFromError` 또는 `componentDidCatch`를 정의할 경우 해당 컴포넌트는 Error Boundary가 된다.
+- 클래스로만 생성이 가능하다.
+- 예외를 처리하여 복구하는 경우에만 사용하고, 제어 흐름을 조작하는 데에는 사용하지 않기를 권장한다.
+
+### static getDrivedStateFromError
+
+`static getDerivedStateFromError(error)`
+
+- 하위의 자손 컴포넌트에서 오류가 발생했을 때 호출된다.
+- 이 메서드는 매개변수로 오류를 전달받고, 갱신된 state 값을 반드시 반환해야 한다.
+- render 단계에서 호출되므로, 부수 효과를 발생시키면 안된다.
+
+### componentDidCatch
+
+`componentDidCatch(error, info)`
+
+- 이 생명주기 메서드는 자손 컴포넌트에서 오류가 발생했을 때 호출되며, 2개의 매개변수를 전달받는다.
+- error - 발생한 오류, info - 어떤 컴포넌트가 오류를 발생시켰는지에 대한 정보를 포함한 componentStack 키를 갖고 있는 객체
+- commit 단계에서 호출되므로, 부수 효과를 발생시켜도 된다.
+- 오류 로그 기록등을 위해 사용하면 된다.
+- 리액트에서 componentDidCatch가 오류를 처리하는 방식은 프로덕션과 개발 빌드가 약간 다르다.
+  - 개발 빌드에서, 오류는 window까지 전파된다. 이는 onerror가 componentDidCatch에서 잡은 오류를 인터셉트 하는 것을 의미한다.
+  - 프로덕션 빌드에서 오류는 전파되지 않는다. 즉 상위 오류 핸들러는 componentDidCatch에 의해 명시적으로 잡히지 않은 오류만 받는다.
+  - 즉 대체 UI 렌더링 제어를 하려면 `static getDerivedStateFromError()`를 사용해야 한다. `componentDidCatch`에서 setState의 호출을 통해 처리하면 릴리즈에서는 사용할 수 없게 된다.
+
+```javascript
+export class ErrorBoundary extends Component {
+  state = {
+    errorMessage: "",
+    componentStackInfo: "",
+  };
+
+  static getDerivedStateFromError(error) {
+    return { errorMessage: error.message };
+  }
+
+  componentDidCatch({ message }, { componentStack }) {
+    this.setState({
+      errorMessage: message,
+      componentStackInfo: componentStack,
+    });
+  }
+
+  render() {
+    if (this.state.errorMessage) {
+      return (
+        <div className="displayError" role="alert">
+          {this.state.errorMessage}
+        </div>
+      );
+    }
+
+    return this.props.children;
+  }
+}
+```
+
+- 위와 같이 구현할 수 있다.
+- 하위 컴포넌트에서 에러가 검출되면 두 라이프 사이클 메서드가 실행되어 에러 메시지 상태를 업데이트하고 이후 render 메서드가 실행될 때, 에러가 발생했다면 에러 메시지를 그렇지 않다면 하위 컴포넌트를 정상적으로 렌더링한다.
+
+## 라이프 사이클이 필요한 이유
+
+React의 성능 최적화를 위한 목적 또는 React가 컨트롤 할 수 없는 사이드 이펙트를 처리하기 위함.
+
+### 대표적인 사이드 이펙트
+
+1. 네트워크 통신 (비동기 통신 요청/응답)
+2. DOM 컨트롤 (실제 문서 객체 접근/조작)
+3. 구독/취소 (이벤트 핸들링 등)
+4. 오류 감지 (ErrorBoundary 컴포넌트 등)
+
+## 네트워크 통신
+
+### 간단한 예시
+
+```javascript
+import React from "react";
+import { getTiltCard } from "api";
+
+class App extends React.Component {
+  state = {
+    tiltCards: [],
+  };
+
+  render() {
+    return (
+      <div className="container">
+        <h1 style={{ fontSize: 24, textAlign: "center" }}>틸트 카드 리스트</h1>
+      </div>
+    );
+  }
+
+  componentDidMount() {
+    getTiltCard().then(({ cards }) => {
+      this.setState({
+        tiltCards: cards,
+      });
+    });
+  }
+}
+
+export default App;
+```
+
+- AJAX 호출을 통한 데이터는 생명주기 메서드 중 componentDidMount 안에 추가되어야 한다.
+- 이는 데이터를 받아올 때 setState를 통하여 컴포넌트를 업데이트 하기 위함이다.
