--- a/_posts/2021-12-16-1213-1219.md
+++ b/_posts/2021-12-16-1213-1219.md
@@ -859,7 +859,7 @@ class App extends React.Component {
   render() {
     return (
       <div className="container">
-        <h1 style={{ fontSize: 24, textAlign: "center" }}>틸트 카드 리스트</h1>
+        <h1 style={ ... }>틸트 카드 리스트</h1>
       </div>
     );
   }
