docs: 1228 TIL 코테 해설 추가

--- a/_posts/2021-12-28-1227-0102.md
+++ b/_posts/2021-12-28-1227-0102.md
@@ -12,17 +12,18 @@ excerpt: ""
 알고리즘 공부를 한동안 하지 않다가 다시 하려니 쉽지 않게 느껴졌다.  
 알고리즘 문제를 풀면서 시간복잡도만 생각해왔는데, 공간복잡도 측면에서도 고민해볼 수 있는 하루였다.
 
-## 1번
+## k개의 원소로 이루어진 연속된 부분수열 분리
 
 ```javascript
 function solution(nums, k) {
   if (nums.length % k !== 0) return "NO";
   const map = new Map();
-  nums.forEach((x) => map.set(x, (map.get(x) || 0) + 1));
+
+  nums.forEach((num) => map.set(num, (map.get(num) || 0) + 1));
   nums.sort((a, b) => a - b);
 
   for (let i = 0; i < nums.length; i++) {
-    if (map.get(nums[i]) > 0) {
+    if (map.get(nums[i])) {
       for (let j = 0; j < k; j++) {
         if (map.get(nums[i] + j) > 0)
           map.set(nums[i] + j, map.get(nums[i] + j) - 1);
@@ -30,11 +31,17 @@ function solution(nums, k) {
       }
     }
   }
+
   return "YES";
 }
 ```
 
-## 2번
+- 우선 k개로 나누어 떨어지지 않는다면 'NO'를 반환한다.
+- 맵에 각 숫자의 개수를 해싱하고 정렬한다.
+- 맵에 해당 숫자가 존재한다면 해당 숫자부터 k번까지 증가시켜 해싱된 숫자를 찾고, 있다면 해당 숫자의 개수를 1감소시킨뒤 계속 반복한다.
+- 모두 돌았는데 정답이 도출되지 않는다면 YES를 반환한다.
+
+## 합이 홀수인 부분수열 개수
 
 ```javascript
 function solution(nums) {
@@ -60,12 +67,16 @@ function solution(nums) {
 }
 ```
 
-## 3번
+- i번째 까지의 부분수열 중 홀수와 짝수의 개수를 계산하며 구해나간다.
+- 홀수 배열에 저장된 모든 값을 더하면 값을 도출할 수 있다.
+
+## 사과를 모두 먹을 수 있는 최소 일수
 
 ```javascript
 function solution(n) {
-  const ch = Array(n).fill(0);
+  const ch = new Map();
   const queue = [n];
+  ch.set(n, 1);
   let L = 0;
 
   function BFS() {
@@ -76,17 +87,17 @@ function solution(n) {
         const x = queue.shift();
 
         if (x === 0) return L;
-        if (x % 2 === 0 && ch[x / 2] === 0) {
+        if (x % 2 === 0 && !ch.has(x / 2)) {
           queue.push(x / 2);
-          ch[x / 2] = 1;
+          ch.set(x / 2, 1);
         }
-        if (x % 3 === 0 && ch[x - (x / 3) * 2] === 0) {
-          queue.push(x - (x / 3) * 2);
-          ch[x - (x / 3) * 2] = 1;
+        if (x % 3 === 0 && !ch.has(x / 3)) {
+          queue.push(x / 3);
+          ch.set(x / 3, 1);
         }
-        if (ch[x - 1] === 0) {
+        if (!ch.has(x - 1)) {
           queue.push(x - 1);
-          ch[x - 1] = 1;
+          ch.set(x - 1, 1);
         }
       }
       L += 1;
@@ -96,3 +107,7 @@ function solution(n) {
   return BFS();
 }
 ```
+
+- 가장 큰 깨달음을 얻었던 문제
+- 알고리즘 문제를 해결하다보면 시간복잡도만 주로 생각하게 됐었는데, 공간복잡도도 고려해야함을 깨닫게 되었다.
+- 쓸데없이 큰 배열을 잡는 것이 아니라 필요한 만큼만 해싱하여 문제를 해결할 수 있었다.
