--- a/_posts/2021-12-28-1227-0102.md
+++ b/_posts/2021-12-28-1227-0102.md
@@ -5,6 +5,53 @@ category: TIL
 excerpt: ""
 ---
 
+## 1227
+
+# 칸반 보드 사전과제 회고
+
+## Drag & Drop
+
+### 구현 방식
+
+- 깃허브 칸반 보드의 드래그 앤 드롭이 어떤 방식으로 동작하는지 직접 테스트해보고 결정했다.
+- 일반적으로 드롭 존과 함께 구현하는 경우가 대부분이었는데, 마우스 커서 위치에 따라 이슈 카드가 실제로 들어갔을 때의 뷰를 미리 보여주는 것이 사용자 경험 상 더 좋을 것 같다고 판단했다.
+- 드래그 중인 요소를
+
+### draggable 속성
+
+이미지나 링크 그리고 선택된 텍스트를 제외한 나머지 요소는 기본적으로 드래그되지 않는다.
+드래그가 가능하도록 만들고자 하는 요소에 대한 draggable 속성이 true로 설정되어야 한다.
+
+### preventDefault를 사용한 이유
+
+drop 이벤트를 사용하기 위해서는 dragover에서 preventDefault를 호출해줘야만 했다.  
+-> 기본 작업이 드롭하지 않는 것이기 때문!  
+드래그 또는 드롭 이벤트로 인해 브라우저 디폴트 이벤트가 발생할 경우 이에 대한 이벤트를 막을 수 있도록 하기 위해 사용했다.
+
+### insertAdjacentHTML 메서드를 사용한 이유
+
+- insertAdjacentHTML 메서드는 기존 요소에 영향을 주지 않고 새로 삽입될 요소만을 파싱하여 자식 요소를 추가하므로 모든 자식 노드를 제거하고 다시 다시 새롭게 자식 노드를 생성하여 자식 요소로 추가하는 innerHTML보다 효율적이고 빠르다고 생각해서 사용했다.
+- toDo 이슈를 추가하는 경우 무조건 toDo 보드의 최상단에 삽입되기 때문에 사용가능하다고 판단했다.
+
+### 상수를 사용한 이유
+
+- 고정되어 있어야 할 값을 변수에 저장해서 사용하다 보면 실수로 값을 바꿀 가능성이 있는데, 이를 방지하고 코드의 의도를 명확하게 하기 위해 사용하였다.
+- 에러메시지나 확인메시지의 경우, 추후 에러 메시지 확장을 고려하여 `Object.freeze()` 메서드를 사용해 객체로 상수화하였다.
+
+## 아쉬운 점
+
+### XSS 처리
+
+프로젝트 시작 전부터 XSS 처리를 꼭 해야겠다고 계획했었다.
+innerHTML을 사용해서 렌더링을 수행할 경우 검증되지 않은 값이 자바스크립트를 통해 삽입되어 문제가 발생할 수 있다고 판단하여 꼭 이 처리를 해줘야겠다고 생각했다.
+
+하지만 기본 기능을 구현하고 리팩토링하는데에 집중하다보니 시간이 빠르게 흘러 과제 제출 시간이 얼마 남지 않았고, 급하게 진행하다보니 테스트를 완전히 하지 못했다. 악성 스크립트를 막는다는 목적은 이루었지만, 추후에 기능이 완전하지 않다는 사실을 알게되었다.  
+filterXSS 메소드를 사용했을 때 의도와 다르게 렌더링되어 의문점이 있었는데, 그 이유는 filterXSS 메소드 로직 내부에 `&` 기호를 이스케이프 문자로 바꾸어 주는 것을 가장 먼저 했어야 했는데 그 점을 빠트렸다는 것이었다. 비록 과제 제출 시간이 끝나고 알게 되었지만, 부족한 부분을 리팩토링하여 filterXSS 메소드를 정상적으로 구현했고, 화면에 렌더링 될 때만 해당 메소드를 적용해 악성 스크립트로부터의 삽입을 방어하도록 했다.
+
+<br />
+<br />
+<br />
+
 ## 1228
 
 # 모의 코딩테스트 11회 회고
