--- a/_posts/2021-12-28-1227-0102.md
+++ b/_posts/2021-12-28-1227-0102.md
@@ -158,3 +158,32 @@ function solution(n) {
 - 가장 큰 깨달음을 얻었던 문제
 - 알고리즘 문제를 해결하다보면 시간복잡도만 주로 생각하게 됐었는데, 공간복잡도도 고려해야함을 깨닫게 되었다.
 - 쓸데없이 큰 배열을 잡는 것이 아니라 필요한 만큼만 해싱하여 문제를 해결할 수 있었다.
+
+## 1229 TIL
+
+# MVC 패턴
+
+MCV는 Model, View, Controller의 약자로 하나의 애플리케이션을 구성할 때 구성 요소를 세가지의 역할로 구분한 패턴이다.  
+로직이 분리가 안되있고, 한꺼번에 정의가 되어있다면 나중에 유지보수하기 힘들 것이라고 생각했다.
+
+## 모델, Model
+
+애플리케이션의 정보, 데이터를 나타낸다. 데이터베이스와 정보들의 가공을 책임지는 컴포넌트를 말한다.
+
+1. 사용자가 편집하길 원하는 모든 데이터를 가지고 있어야 한다.
+2. 뷰나 컨트롤러에 대해서 어떤 정보도 알지 말아야 한다.
+3. 변경이 일어나면, 변경 통지에 대한 처리방법을 구현해야만 한다.
+
+## 뷰, View
+
+1. 모델이 가지고 있는 정보를 따로 저장해서는 안된다.
+2. 모델이나 컨트롤러와 같이 다른 구성요소들을 몰라야 된다.
+3. 변경이 일어나면 변경통지에 대한 처리방법을 구현해야만 한다.
+
+## 컨트롤러, Controller
+
+- 데이터와 사용자인터페이스 요소들을 잇는 다리 역할을 한다.
+- 즉, 이벤트들을 처리하는 부분
+
+1. 모델이나 뷰에 대해 알고 있어야 한다.
+2. 모델이나 뷰의 변경을 모니터링 해야 한다.
