fix: 사전 과제 회고 수정

--- a/_posts/2021-12-28-1227-0102.md
+++ b/_posts/2021-12-28-1227-0102.md
@@ -9,13 +9,34 @@ excerpt: ""
 
 # 칸반 보드 사전과제 회고
 
+## 폴더 구성
+
+이벤트 리스너를 등록하여 컨트롤러 역할을 하는 app.js,  
+이슈 리스트와 이슈 번호를 발급하기 위한 idNumber를 상태로 저장하고 상태가 변경될 때 이슈 리스트 렌더 함수를 호출하는 store.js,  
+화면 뷰와 관련된 함수를 모아둔 view.js,  
+그 외 유틸 함수와 상수를 관리하는 utils 폴더로 구성하였다.
+
+이 중 idNumber의 경우 일반적으로 데이터베이스가 기본키를 지정해주기에 필요없지만, 지금 상황에서는 중복되지 않는 키를 발급해줘야 하고 일관성을 유지하며 중복되지 않는 키를 발급해주기 위해 상태로 관리하였다.
+
 ## Drag & Drop
 
 ### 구현 방식
 
 - 깃허브 칸반 보드의 드래그 앤 드롭이 어떤 방식으로 동작하는지 직접 테스트해보고 결정했다.
 - 일반적으로 드롭 존과 함께 구현하는 경우가 대부분이었는데, 마우스 커서 위치에 따라 이슈 카드가 실제로 들어갔을 때의 뷰를 미리 보여주는 것이 사용자 경험 상 더 좋을 것 같다고 판단했다.
-- 드래그 중인 요소를
+
+1. 드래그를 시작할 때 해당 이슈에 dragging 클래스를 추가하고, drag 구현 로직에 필요한 정보(노드 객체, 보드 타입, 인덱스)를 객체에 저장하였다.
+2. 드롭 가능한 지역을 이슈 리스트가 들어갈 수 있는 전역으로 선택한 뒤, 드래그 중인 이슈를 다른 이슈 위에 올리게 되면 해당 요소의 정보를 가져온다.
+   - drag 이슈 정보와 drop 이슈 정보를 비교하여 drop요소가 falsy한 값인 경우 리스트의 가장 뒤에, 그렇지 않다면 dragover 중인 보드에서 drop 이슈 인덱스와 drag 이슈 인덱스를 비교하여 drag 인덱스가 작다면 drop 이슈 앞에, 크다면 drop 이슈 뒤에 요소를 삽입하였다.
+   - dragover 이벤트는 연속적으로 발생하기에 같은 이슈를 dragover하는 경우에는 return하여 리플로우를 최소화하였다.
+   - 이슈를 드롭할 보드의 이슈 리스트가 드래그한 이슈를 포함하고 있으면서, dropIndex가 -1인 경우 즉, 이슈를 dragover 하지 않는 경우에도 return을 하면 정확히 한 번만 이슈가 삽입될 수 있었다.
+3. 드롭을 실행하게 되면 렌더링 한 정보와 동일하게 상태를 업데이트하고, 스토리지에 반영하였다.
+4. drag 이벤트가 종료되면 dragging 클래스를 제거하였다.
+
+### dragInfo 선언 이유
+
+- 위의 로직을 구현하기 위해서는 drag한 요소의 정보가 필요했다.
+- `dataTransfet.setData`는 dragover 이벤트에서 정보를 받아올 수 없었기에 드래그 정보를 저장할 변수가 필요하다고 생각했다.
 
 ### draggable 속성
 
@@ -28,6 +49,8 @@ drop 이벤트를 사용하기 위해서는 dragover에서 preventDefault를 호
 -> 기본 작업이 드롭하지 않는 것이기 때문!  
 드래그 또는 드롭 이벤트로 인해 브라우저 디폴트 이벤트가 발생할 경우 이에 대한 이벤트를 막을 수 있도록 하기 위해 사용했다.
 
+## 기타
+
 ### insertAdjacentHTML 메서드를 사용한 이유
 
 - insertAdjacentHTML 메서드는 기존 요소에 영향을 주지 않고 새로 삽입될 요소만을 파싱하여 자식 요소를 추가하므로 모든 자식 노드를 제거하고 다시 다시 새롭게 자식 노드를 생성하여 자식 요소로 추가하는 innerHTML보다 효율적이고 빠르다고 생각해서 사용했다.
@@ -36,9 +59,75 @@ drop 이벤트를 사용하기 위해서는 dragover에서 preventDefault를 호
 ### 상수를 사용한 이유
 
 - 고정되어 있어야 할 값을 변수에 저장해서 사용하다 보면 실수로 값을 바꿀 가능성이 있는데, 이를 방지하고 코드의 의도를 명확하게 하기 위해 사용하였다.
-- 에러메시지나 확인메시지의 경우, 추후 에러 메시지 확장을 고려하여 `Object.freeze()` 메서드를 사용해 객체로 상수화하였다.
+- 에러메시지나 확인메시지의 경우, 추후 에러 메시지 확장을 고려하여 `Object.freeze()` 메서드를 사용해 불변 객체로 상수화하였다.
+
+### 상태 관리
+
+- 상태 관리는 최소한으로 이슈 리스트와 이슈 리스트를 발급하기 위한 숫자값만 저장했다.
+- 즉, 스토리지에 저장하기 위한 정보들만 상태로 관리했다.
+
+## 웹팩 설정
+
+### 웹팩을 사용한 이유
+
+가장 큰 이유는 웹팩이 기본 제공하는 모듈 기능과 dev server를 사용하기 위해 사용했다.
+
+### 웹팩 dev-server
+
+웹 애플리케이션을 개발하는 과정에서 유용하게 쓰이는 도구로, 웹팩의 빌드 대상 파일이 변경되었을 때 명령어를 실행하지 않고도 코드만 변경하고 저장하면 빌드한 후 브라우저를 새로고침 해준다.
+
+- 데브 서버로 빌드한 결과물은 메모리에 저장되고, 파일로 생성하지는 않기 때문에 더 빠르고 자원 소모가 줄어든다.
+
+### `--node-env`
+
+npm에서 환경 변수를 CLI로 제공할 수 있는 명령어
+
+### webpack.config.js가 아닌 파일을 나눠 구성한 이유
+
+- 실행모드에 따라 조건문으로 설정을 구분할 수 있으나 파일을 아예 나눠 놓는 것이 더 좋다고 판단했다.
+- 웹팩 설정 파일을 하나로 병합해주는 Webpack Merge를 사용해 코드 중복을 제거했다.
+
+### `path.resolve(__root, 'dist')`
+
+- 폴더와 파일의 경로를 지정해주는 코드
+- 결과를 dist 폴더에 출력하겠다는 뜻
+
+### dev tool
+
+- 소스맵 생성 여부와 방법을 제어
+- 소스맵은 빌드 파일이 빌드 이전 파일의 소스 코드 몇 번째 줄과 연결되어 있는지 매핑 정보를 담은 파일
+
+### css-loader
+
+css-loader에 의해 css가 해석되어 JS 파일에서 import 하여 css 파일을 읽어들일 수 있다.
+
+### style loader
+
+style-loader에 의해 html head에 스타일을 주입받는다.
+
+### MiniCssExtractPlugin
+
+css 파일을 추출해주는 플러그인이다.
+
+### 부족한 점
+
+- 우선 기본 설정을 하고 시간이 남는다면 빌드 모드와 개발 모드를 철저히 분리하여 설정하고자 했다.
+- 하지만 생각보다 시간이 부족하여 웹팩 설정을 완벽하게 하지 못한 것 같다.
+- 하지만 이대로도 큰 문제는 없다고 판단했다.
 
 ## 아쉬운 점
+
+### index.html을 제출하지 못한 이유
+
+온전히 나의 부주의로 인해 발생한 일이며, 이에 대해 핑계를 대기보다는 이번 실수를 통해 예상치 못한 문제가 있을 수 있음을 언제나 예상하고 대비해야겠다는 생각을 했다.
+
+이전까지 프로젝트를 진행할 때는 **HtmlWebpackPlugin**을 사용했기에 빌드 파일은 명령어를 입력하면 다시 생성될 것이라고 생각했다.  
+모든 파일 확인을 마친 뒤, 마지막에 dist 파일(빌드 파일)만 지우고 제출하여 이러한 상황이 발생하게 되었다.
+
+### Storage
+
+이슈 리스트 상태를 업데이트할 때 idNumber의 경우 굳이 스토리지에 다시 저장하지 않아도 됨에도 불구하고 다시 저장하는 로직인 상태였다.
+setIdNumber를 호출할 때만 스토리지에 idNumber를 저장하는 방식으로 수정하였다.
 
 ### XSS 처리
 
@@ -158,6 +247,10 @@ function solution(n) {
 - 가장 큰 깨달음을 얻었던 문제
 - 알고리즘 문제를 해결하다보면 시간복잡도만 주로 생각하게 됐었는데, 공간복잡도도 고려해야함을 깨닫게 되었다.
 - 쓸데없이 큰 배열을 잡는 것이 아니라 필요한 만큼만 해싱하여 문제를 해결할 수 있었다.
+
+<br />
+<br />
+<br />
 
 ## 1229 TIL
 
