--- a/_posts/2021-12-28-1227-0102.md
+++ b/_posts/2021-12-28-1227-0102.md
@@ -434,3 +434,95 @@ PC 값은 스레드가 명령어의 어디까지 수행했는지를 나타내게
 - Context Switching 시, 캐시 메모리를 비울 필요가 없기 때문에 비용이 적고 더 빠르다.
   - 스레드는 Stack 영역만 초기화하면 되기 때문
 - 스레드는 프로세스 내의 메모리를 공유하기 때문에 데이터 전달이 간단하므로 IPC에 비해 비용이 적고 더 빠르다.
+
+<br />
+<br />
+<br />
+
+## 0101 TIL
+
+# Context Switching
+
+- CPU는 한 번에 하나의 프로세스만 처리할 수 있다.
+- 여러 프로세스를 처리해야 하는 상황에서 현재 진행중인 작업의 상태를 PCB에 저장하고 다음에 진행할 작업의 상태값을 읽어 적용하는 과정
+- 태스크의 대부분 정보는 레지스터에 저장되고 PCB로 관리된다. 현재 실행하고 있는 태스크의 PCB 정보를 저장하고, 다음 실행할 태스크의 PCB 정보를 읽어 레지스터에 적재하고 CPU가 이전에 진행했던 과정을 연속적으로 수행할 수 있다.
+- 이는 많은 비용이 소모되는데, 캐시와 메모리 매핑을 초기화해야 한다.
+- Context Switching 비용은 프로세스가 스레드보다 더 많이 든다. 이유는 스레드는 스택 영역을 제외한 모든 메모리를 공유하기 때문에 스택 영역만 변경을 진행하면 되기 때문이다.
+
+# Thread-safe
+
+멀티 스레드 환경에서 여러 스레드가 동시에 하나의 공유 자원에 접근할 때, 의도한 대로 동작하는 것을 Thread-safe하다 라고 표현한다.
+
+## 구현 방법
+
+- 공유 자원에 접근하는 임계영역(critical section)을 동기화 기법으로 제어해줘야 한다. 이를 '상호배제'라고 한다.
+- 동기화 기법으로는 뮤텍스나 세마포어가 존재한다.
+- 어떤 함수가 Reentrant 하다는 것은 여러 스레드가 동시에 접근해도 언제나 같은 실행 결과를 보장한다는 의미이다.
+  - 이를 만족하기 위해서 해당 서브루틴에서는 공유자원을 사용하지 않으면 된다.
+  - 즉, 전역 변수를 사용하거나 반환하면 안되고 호출 시 제공된 매개변수만으로 동작해야 한다.
+- Reentrant하면 Thread-safe하지만 그 역은 성립하지 않는다.
+
+# 동기와 비동기
+
+## 동기 (동시에 일어나는)
+
+동시에 라는 말은 실행되었을 때 값이 반환되기 전까지는 블로킹되어 있다는 것을 의미한다.
+
+- 동시에 일어난다는 뜻으로 요청과 그 결과가 동시에 일어난다는 약속
+- 바로 요청을 하면 시간이 얼마가 걸리던지 요청한 자리에서 결과가 주어져야 한다.
+- 요청과 결과가 한 자리에서 동시에 일어난다.
+
+## 비동기 (동시에 일어나지 않는)
+
+- 요청과 결과가 동시에 일어나지 않은 것이기에 그 자리에서 결과가 주어지지 않는다.
+
+## 비교
+
+- 동기 방식은 설계가 매우 간단하고 직관적이지만 결과가 주어질 때까지 아무것도 못하고 대기해야한다는 단점이 있다.
+- 비동기 방식은 동기보다 복잡하지만, 결과가 주어지는데 시간이 걸리더라도 그 시간동안 다른 작업을 할 수 있으므로 자원을 효율적으로 사용할 수 있다는 장점이 있다.
+
+# 동기화 문제
+
+동기화는 한정적인 자원에 여러 스레드가 동시에 접근할 경우 문제가 발생할 수 있는데, 이 문제를 방지하기 위해 여러 스레드에게 하나의 자원에 대한 처리 권한을 주거나 순서를 조정하는 기법이다.
+
+## 스레드 동기화
+
+1. 실행 순서의 동기화 - 스레드의 실행 순서를 정의하고, 이 순서를 따르도록 함
+2. 메모리 접근에 대한 동기화
+   - 메모리 접근에 있어서 동시 접근을 막는 것
+   - 실행의 순서가 중요한 것이 아니라 한 순간에 하나의 스레드만 해당 자원에 접근하도록 하는 것
+
+## 유저 모드의 동기화
+
+1. 임계 구역 기반의 동기화
+   - 열쇠를 얻은 프로세스만 임계 구역에 들어갈 수 있다.
+   - 다른 스레드가 열쇠를 가지고 있을 시에는 반환할 때까지 블로킹된다.
+2. 인터락 함수 기반의 동기화
+   - 함수 내부적으로 한 순간에 하나의 스레드에 의해서만 실행되도록 동기화된다.
+   - 임계 구역 기반의 동기화도 내부적으로 인터락 함수를 기반으로 구현된다.
+   - 유저 모드 기반으로 동작해서 속도가 빠르다.
+
+## 커널 모드의 동기화
+
+1. 세마포어
+   - 공유된 자원의 데이터를 여러 프로세스, 스레드가 접근하는 것을 막는 것이다.
+   - 동시에 접근할 수 있는 개수를 가지고 있는 Counter
+   - 예를 들어 세마포어는 1개 이상의 열쇠라고 할 수 있다.
+   - 세마포어가 한 개인 경우는 뮤텍스와 같다.
+   - 세마포어는 소유할 수 없기에 세마포어를 소유하지 않은 스레드가 세마포어를 해제할 수 있는 문제가 발생한다.
+2. 뮤텍스
+   - 임계 구역을 가진 스레드들의 Running time이 서로 겹치지 않게 각각 단독으로 실행되게 하는 기술
+   - 뮤텍스 객체를 두 스레드가 동시에 사용할 수 없다.
+   - Lock에 대한 소유권이 있으며 Lock을 가지고 있을 경우에만 공유자원에 접근할 수 있고, 반납할 수 있다.
+   - 뮤텍스는 무조건 1개의 열쇠만 가질 수 있다.
+3. 모니터
+   - 뮤텍스와 모니터는 상호 배제를 함으로써 임계 구역에 하나의 스레드만 들어갈 수 있다.
+   - 반면, 세마포어는 하나의 스레드만 들어가거나 혹은 여러개의 스레드가 들어가게 할 수 있다.
+
+### 요약
+
+뮤텍스 : 한 스레드, 프로세스에 의해 소유될 수 있는 키를 기반으로 한 상호배제 기법  
+세마포어 : 현재 공유자원에 접근할 수 있는 스레드, 프로세스의 수를 나타내는 값을 두어 상호배제를 달성하는 기법
+
+-> 뮤텍스와 세마포어의 목적은 특정 동기화 대상이 이미 특정 스레드나 프로세스에 의해 사용중일 경우, 다른 스레드가 해당 동기화 대상에 접근하는 것의 제한하는 것으로 동일하지만, 관리하는 동기화 대상이 몇 개인가에 따라 차이가 생긴다. 뮤텍스는 소유할 수 있어서 뮤텍스를 소유하고 있는 스레드가 이 뮤텍스를 해제할 수 있다. 반면 세마포어는 소유하지 않고 있는 다른 스레드가 세마포어를 해제할 수 있다.
+두 기법 모두 완벽하지는 않아 데드락이 발생할 수도 있다.
