--- a/_posts/2022-01-09-0103-0109.md
+++ b/_posts/2022-01-09-0103-0109.md
@@ -47,3 +47,62 @@ excerpt: ""
 
 > **reference**  
 > [이벤트 루프, 넌 누구냐](https://tecoble.techcourse.co.kr/post/2021-08-28-event-loop/)
+
+<br />
+<br />
+<br />
+
+## 0104
+
+## pjax & SPA
+
+### SPA로 프로젝트를 구성했을 때의 장점
+
+여러 화면으로 구성된 애플리케이션을 구현하려다 보니 가장 먼저 하게 된 고민이 라우팅 처리였다.  
+기존의 링크 태그를 사용하는 전통적인 화면 전환 방식은 새로운 페이지 요청 시마다 새로 고침이 발생되어 사용성이 좋지않다고 판단했다.  
+그래서 사용자 경험을 향상시키기 위해 SPA로 프로젝트를 진행하고자 했다.
+
+### SPA 구성 과정
+
+index.html에는 div 태그 하나만 선언하고, 이후 모든 렌더링은 JS를 사용해서 진행했다.
+
+우선 페이지 별로 클래스 컴포넌트화하여 내부에 html을 반환할 메서드와 이벤트 핸들러를 등록할 메서드를 정의했다.
+그리고 엔트리 파일인 app.js에서 render 함수를 정의했다.
+이 함수는 현재 url의 location.pathname에 해당하는 클래스 컴포넌트를 불러와서 app id를 가진 div 태그의 내부에 html을 삽입하고, 이벤트 핸들러를 등록하는 메서드를 실행시킨다.
+
+이를 사용하기 위해서는 a 태그의 기본 동작인 링크 이동을 막고, history를 관리할 필요가 있었다.  
+라우팅을 실행할 a 태그에는 data-link라는 사용자 정의 속성을 주고, 이 속성을 가진 a 태그를 클릭할 때는 preventDefault()로 기본 동작을 막았다. 그리고 a 태그의 href 속성을 가져와서 pushState 메서드를 사용하여 history에 push하고 url을 변경했다. 그리고 작성해뒀던 render 함수를 실행시켜 url에 해당하는 뷰를 렌더링했다.  
+또한 popState 이벤트가 발생할 때도 render 함수를 실행시켜 이전 버튼이나 다음 버튼을 클릭했을 때의 url에 해당하는 뷰를 화면에 렌더링했다.
+
+이러한 pjax 방식은 실제 url을 변경시키기 때문에 새로고침시 서버의 도움이 필요하다는 특징을 가지고 있다.  
+그래서 server에서는 어떤 url로든 url 입력을 통해 get 요청을 하게 된다면 index.html을 반환하도록 했고, DOMContentLoaded 이벤트가 발생했을 때 render 함수를 실행시켜 현재 url에 해당하는 뷰가 렌더링되도록 구현했다.  
+그 외의 이벤트를 통해 ajax 방식으로 서버와 통신이 이루어질 때는 json 형식의 데이터를 보내주어 렌더링하도록 했다.
+
+### 위와 같이 구현했을 때 문제점
+
+제가 처음 구현했을 때는 페이지 단위로 클래스 컴포넌트를 작성했는데, 이를 컴포넌트 단위로 좀 더 분할해서 재사용성을 키우면 좋겠다는 생각을 했다.  
+그리고 페이지를 라우팅할 때, 중복되는 요소를 포함하여 모든 div 태그를 비우고 다시 렌더링 하는 것이 성능적으로 좋지 않다고 생각했다.  
+변화가 발생하지 않은 DOM을 포함하여 모든 요소를 리렌더링 해야 했기에 이에 대한 비용이 크다고 생각했고, 이를 해결하기 위해서는 변화가 발생했는 지를 확인하여 변화가 발생한 컴포넌트만 리렌더링을 해야겠다고 생각했다.
+
+### queryString이나 param을 구현한다면?
+
+정규표현식을 통해 param이나 query string 정보를 받아오고, 클래스 컴포넌트를 생성할 때 이를 인자로 넘겨서 동적인 html을 반환할 수 있다고 같다고 생각한다.
+
+### 프로젝트에 적용하지 못한 이유
+
+페이지 내부에서 컴포넌트 분리, 효율적인 렌더링을 위한 비교 알고리즘, query string이나 param 처리 등을 고려했을 때 시간적인 문제가 발생할 것이라고 생각했다.  
+프로젝트가 개인 프로젝트이거나 시간이 좀 더 여유롭게 주어졌더라면 더 많은 것을 시도하고 배울 수 있을 것이라고 생각해서 끝까지 진행했을 것 같다.  
+하지만 팀프로젝트이고 각자 맡은 기능 파트가 있었기에 나의 탐구적인 욕심으로 팀원에게 영향이 가지 않도록 하기 위해 배우게 된 내용에 만족하며 멀티 페이지 애플리케이션으로 프로젝트를 진행했다.
+
+### 느낀점
+
+바닐라 자바스크립트로 spa를 구현하는 기본 원리에 대해 이해하게 되었고, spa 프레임워크가 이를 얼마나 더 효율적이고 편리하도록 제공해주는 지에 대해 느끼게 되었다.  
+더 나아가 여기에 웹 컴포넌트를 더해서 프로젝트를 진행한다면 되게 재밌을 것 같다는 느낌을 받았다. 그래서 이와 관련된 프로젝트를 진행해봐야겠다고 다짐했다.
+
+### Pjax란?
+
+pjax란 HTML 5의 History API인 pushState와 popstate 이벤트를 사용하여 ajax의 history 관리 문제를 해결하는 라우팅 방식이다.
+
+ajax 요청은 주소창의 URL을 변경시키지 않기 때문에 브라우저의 history 관리가 동작하지 않는다. 그렇기 때문에 새로고침을 해도 언제나 첫 페이지가 다시 로딩된다. 이때 사용하는 것이 pushState 메서드이다. pushState 메서드는 주소창의 URL을 변경하고 URL을 history entry로 추가하지만 서버로 HTTP 요청을 하지는 않는다.
+
+단, 브라우저 새로고침 버튼을 클릭하면 브라우저 주소창의 url이 변경되기 때문에 요청이 서버로 전달된다. 즉, pjax 방식은 서버 렌더링 방식과 ajax 방식이 혼재되어 있는 방식으로 서버의 지원이 필요하다.
