--- a/_posts/2022-01-09-0103-0109.md
+++ b/_posts/2022-01-09-0103-0109.md
@@ -106,3 +106,94 @@ pjax란 HTML 5의 History API인 pushState와 popstate 이벤트를 사용하여
 ajax 요청은 주소창의 URL을 변경시키지 않기 때문에 브라우저의 history 관리가 동작하지 않는다. 그렇기 때문에 새로고침을 해도 언제나 첫 페이지가 다시 로딩된다. 이때 사용하는 것이 pushState 메서드이다. pushState 메서드는 주소창의 URL을 변경하고 URL을 history entry로 추가하지만 서버로 HTTP 요청을 하지는 않는다.
 
 단, 브라우저 새로고침 버튼을 클릭하면 브라우저 주소창의 url이 변경되기 때문에 요청이 서버로 전달된다. 즉, pjax 방식은 서버 렌더링 방식과 ajax 방식이 혼재되어 있는 방식으로 서버의 지원이 필요하다.
+
+## 0105
+
+# Git action
+
+## DevOps
+
+- Development + Operations
+- 개발과 운영의 합성어
+- Dev : Plan - Code - Build - Test
+- Ops : Release - Deploy - Operate - Monitor
+- CI/CD 툴 이용하여 Build, Test, Deploy 자동화
+- Pros
+  - 커뮤니케이션 리소스 개선
+  - 개발, 배포 속도가 빨라짐
+
+### CI (Continuous Integration)
+
+- 자동화된 프로세스
+- 코드 변경사항의 정기적 빌드, 테스트 병합 자동화
+- Pros
+  - 빠른 디버깅
+  - 코드 품질 개선
+
+### CD (Continuous Delivery(or Deployment))
+
+- Continuous Delivery: 공유 저장소로 자동 Release(Test -> Staging)
+- Continuous Deployment: Production Level까지 자동 Deploy(Test -> Staging -> Production)
+- MSA(MicroService Architecture) + Agile 일 경우, 사용자에게 최대한 빠른 시간안에 Production 제공 필요
+
+### Issue & PR Templates
+
+- 일관성 있는 로깅이 중요하다.
+- configuration file을 만들어 issue와 PR 내용의 template 지정 가능
+- `.github/ISSUE_TEMPLATE/*.md`에 template 생성 가능
+- `Settings` - Feaures_Set up templates에서 손쉽게 생성 가능
+
+## GitHub actions
+
+- github에서 공식 제공하는 CI/CD Tools
+- 개발 워크플로우 자동화
+
+### Workflow
+
+- Job들로 구성. Event에 의해 트리거되는 자동화 된 프로세스
+- 최상위 개념
+- YAML으로 작성되며, .github/workflows에 저장
+
+### Event
+
+- Workflow를 실행하는 규칙
+- Push, pull request, Cron으로 연결된 외부 이벤트에 의해 실행
+
+### Job
+
+- Step들로 구성
+- 가상환경의 인스턴스에서 실행
+- 다른 Job에 의존관계를 가질 수 있고, 독립 병렬 실행도 가능
+
+### Step
+
+- Task들의 집합으로 커맨드를 실행하거나 action을 실행
+
+### Action
+
+- 가장 작은 단위
+- Step을 연결해 Job을 구성
+- 재사용 가능
+
+### Runner
+
+- workflow가 실행될 인스턴스
+- GitHub-hosted runner와 self-hosted runner으로 나뉨
+
+## 예시
+
+```yaml
+name: Hello
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  hello:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Say Hello
+        run: echo "hello, world!"
+```
